# src/amane/db/repo_types.py
@@ -267,6 +267,7 @@ class LibraryUpdates(TypedDict, total=False):
     video_template: str
     link_template: str | None
     link_mode: LinkMode
+    strm_content_template: str | None
     cd_suffix_template: str
     thumb_template: str | None
     poster_template: str | None
